@@ -2,6 +2,8 @@ Revision history for Tesla-API
 
 1.01 UNREL
     - _decode() is now an object method as opposed to a simple function
+    - _api_attempts() now resets on a false value, and we reset it at the
+      beginning of each call to _tesla_api_call()
 
 1.00    2022-04-19
     - This version is now deemed stable; The user-facing API calls will now
